# PyPG

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
PyPG/: __init__.py  main.py
PyPG/code/: __init__.py
PyPG/code/core/: create_database.py  create_extensions.py  create_local_folders_and_files.py  create_policies.py  create_schemas.py  create_users.py  prepare_subscription.py  rollback_and_cleanup_all.py
PyPG/code/utils/: db_connect.py  random_password_generator.py  write_to_log.py
code/: PyPG_explore.ipynb  explore.ipynb  run_rollback_and_cleanup.py  run_setup_database.py
code/core/: __init__.py  create_database.py  create_extensions.py  create_local_folders_and_files.py  create_policies.py  create_replication_user.py  create_schemas.py  create_users.py  prepare_subscription.py  read_configuration.py  rollback_and_cleanup_all.py
code/utils/: __init__.py  db_connect.py  random_password_generator.py  write_to_setup_statements.py
inputs/: config-example.yml  connection_example.yml
simple_postgres_setup/: __init__.py  main.py
simple_postgres_setup/code/: __init__.py
simple_postgres_setup/code/core/: create_database.py  create_extensions.py  create_local_folders_and_files.py  create_policies.py  create_schemas.py  create_users.py  prepare_subscription.py  rollback_and_cleanup_all.py
simple_postgres_setup/code/utils/: __init__.py  execute_statement.py  write_to_undo_statements.py
simple_postgres_setup/templates/: .env.example  config.yml.example
