[tool.poetry]
name = "pypg"
version = "0.1.0"
description = "PyPG is a python utility for deploying PostgreSQL databases from a yaml configuration file."
authors = ["Matthias Daues <matthias.daues@datenschoenheit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = "^2.0.15"
sqlalchemy-utils = "0.41.1"
pyyaml = "6.0.1"
psycopg2-binary = "2.9.6"
aiosql = "10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
